# truelist-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/truelist/: __init__.py  _http.py  async_client.py  client.py  errors.py  types.py
tests/: conftest.py  test_async_client.py  test_client.py
