[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truelist"
dynamic = ["version"]
description = "Official Python SDK for the Truelist.io email validation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Truelist", email = "support@truelist.io" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["email", "validation", "verification", "truelist", "api"]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://truelist.io"
Documentation = "https://github.com/truelist/truelist-python#readme"
Repository = "https://github.com/truelist/truelist-python"
Changelog = "https://github.com/truelist/truelist-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/truelist/truelist-python/issues"

[tool.hatch.version]
path = "src/truelist/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/truelist"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
